# dqn-hfo

./: .gitignore  CMakeLists.txt  README.md  actor.prototxt  actor_solver.prototxt  build.sh  critic.prototxt  critic_solver.prototxt  dqn.cpp  dqn.hpp  dqn.prototxt  dqn_actor.prototxt  dqn_actor_solver.prototxt  dqn_critic.prototxt  dqn_critic_solver.prototxt  dqn_main.cpp  dqn_solver.prototxt  hfo_game.cpp  hfo_game.hpp  matplotlibrc  tmp.sh
cmake/Modules/: FindALE.cmake  FindCAFFE.cmake  FindGFLAGS.cmake  FindGLOG.cmake  FindHFO.cmake
hfo_policies/: dummy_teammate.cpp
scripts/: plot-accuracy.sh  plot-deviation.sh  plot-loss.sh  record.sh  save.sh  skills_exps.sh  start.py  train.sh
src/: curriculum.cpp  curriculum.hpp  dqn.cpp  dqn.hpp  dqn_main.cpp  hfo_game.cpp  hfo_game.hpp
src/hfo_policies/: chaser.cpp  chaser.cxx  dummy_goalie.cpp  dummy_goalie.cxx  dummy_teammate.cpp  dummy_teammate.cxx  passer.cpp
src/tasks/: kick_to_goal.cpp  move_to_ball.cpp  task.cpp  task.hpp
